src/test/resources/testinput/parsable/symtab/invalid_coco/quantifiers1.ocl
/* (c) https://github.com/MontiCore/monticore */
ocl quantifiers1 {
  inv:
    forall a in Auction: Time.now().lessThan(a.startTime) implies a.numberOfBids == 0;
}
